post routing and basic card list

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full">
+</script> -->
 
 </html>
